fixed alignment of services page, colors on home page

--- a/index.css
+++ b/index.css
@@ -109,10 +109,11 @@
      line-height: 26px;
    }
    .home-banner >span {
-    color:var(--green1);
+    color:black;
     text-align: center;
     width:100%;
     display:block;
+    margin-top:10px;
    }
 
    .content-container {
@@ -142,7 +143,7 @@
 
    .intro-container >span:nth-child(2) {
      font-weight:bold;
-     color:var(--green1);
+     color:black;
    }
 
    .phrase-container {
@@ -171,7 +172,7 @@
    }
 
    .covid-container >p {
-     color:var(--navy1);
+     color:black;
      font-weight:normal;
      font-size:16px;
      line-height:18px;
@@ -199,12 +200,16 @@
 
    .svc-container{
      display:flex;
+     flex-direction:column;
+     align-items: center;
      justify-content: center;
 
      margin:40px 40px 0;
    }
    .svc-content-one {
-     
+     display:flex;
+     flex-direction: column;
+     align-items: center;
 
      margin-right:20px;
    }
@@ -237,16 +242,18 @@
 
    .main-services {
      display:flex;
-     max-width:650px;
-     justify-content:space-between;
+     
+     justify-content:center;
    }
 
    .main-services >div {
+     margin:20px;
      margin-bottom:20px;
    }
 
    .floor-maintenance {
      width:195px;
+     
    }
 
    .cleaning-services {
@@ -254,9 +261,10 @@
    }
 
    .snow-services {
+    text-align:center;
      padding:10px 0 0 0;
      margin-top:0px;
-     max-width:500px;
+     align-self:start;
      border-top:solid 1px black;
      border-bottom:solid 1px black;
    }
@@ -273,6 +281,9 @@
 
    .repeat-services {
      margin-top:10px;
+     display:flex;
+     flex-direction: column;
+     align-items: center;
    }
 
    #about {
@@ -295,14 +306,14 @@
    .abt-content-one >header{
      font-size:22px;
      font-weight:bold;
-     color:var(--green1);
+     color:var(--navy1);
      margin:0;
    }
 
 
    .abt-content-one p {
      margin:0;
-     color:var(--navy1);
+     color:black;
    }
 
    .abt-content-one p:nth-child(2) {
@@ -338,7 +349,7 @@
    .contact-container >header{
      font-size:22px;
      font-weight:bold;
-     color:var(--green1);
+     color:var(--navy1);
    }
 
    .contact-container >a {
@@ -473,6 +484,27 @@
    @media only screen and (max-width: 590px) {
      .main-services {
        flex-direction:column;
+       align-items: center;
+     }
+
+     .cleaning-services {
+       display:flex;
+       flex-direction: column;
+       align-items: center;
+     }
+
+     .cleaning-services p {
+       text-align: center;
+     }
+
+     .floor-maintenance {
+      display:flex;
+      flex-direction:column;
+      align-items: center;
+     }
+
+     #services ul {
+       padding:0 0 0 0;
      }
    }
 
